# KoerberTravelTool

./: .gitignore  CMakeLists.txt  CMakePresets.json  CPackOptions.cmake  Desktop.ini  Doxyfile  README.md
Other Projekt reference/: .clang-tidy  CMakeLists.txt
include/ReiseManager/Core/: Logger.hpp  Trip.h  Trip.hpp
include/ReiseManager/UI/: TripDialog.h  TripDialog.hpp
include/TravelManager/Core/: Logger.hpp  Trip.hpp
include/TravelManager/UI/: TripDialog.hpp
installer/: README.md  admin_installer.nsi  cpack_admin_config.cmake  cpack_inno.cmake  cpack_inno_config.cmake  cpack_selection_config.cmake  cpack_user_config.cmake  inno_installer.iss  inno_installer.iss.in  installer.nsi  iscc_config.cmake  selection_installer.nsi  user_installer.nsi
src/: CMakeLists.txt  ReiseManager.rc  TravelManager.rc  main.cpp
src/Core/: CMakeFiles.txt  CMakeLists.txt  Logger.cpp  Trip.cpp
src/UI/: CMakeFiles.txt  CMakeLists.txt  TripDialog.cpp
tests/: CMakeLists.txt  TripTests.cpp
